--- a/docroot/sites/all/themes/prc_foundation/stylesheets/parc_foundation.css
+++ b/docroot/sites/all/themes/prc_foundation/stylesheets/parc_foundation.css
@@ -3466,6 +3466,10 @@ table tfoot tr td {
   #filter-panel .views-exposed-form .views-exposed-widget {
     padding: 0;
   }
+  #filter-panel .filter-panel-search {
+    width: 170px;
+    height: 70px;
+  }
   #filter-panel .filter-panel-search .view-filters {
     display: inline-block;
   }
@@ -3802,6 +3806,9 @@ table tfoot tr td {
   .gallery-main .filter-panel-toggle input.facetapi-checkbox {
     display: none;
   }
+  .gallery-main .view-filters {
+    display: none;
+  }
   .gallery-main .view-content .gallery-tiles .columns {
     border-top: 10px solid #EEEEEE;
     border-bottom: 10px solid #EEEEEE;
@@ -4093,8 +4100,12 @@ table tfoot tr td {
   #filter-panel {
     width: 464px;
   }
+  #filter-panel .filter-panel-search {
+    width: 285px;
+    height: 84px;
+  }
   #filter-panel .filter-panel-search .view-filters input {
-    width: auto;
+    width: 285px;
     margin: 0 0 1em 0;
     background: url("../images/search-filter-icon.png") 95% center no-repeat;
   }
